--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,16 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "strictPropertyInitialization": false, 
+    "noImplicitAny": false, 
+    "noImplicitThis": false,
     "noImplicitOverride": true,
+    "strictNullChecks": false,
+    "skipLibCheck": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
-    "sourceMap": true,
+    "sourceMap": true, 
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
